--- a/src/Homepage/Home.html
+++ b/src/Homepage/Home.html
@@ -8,7 +8,7 @@
 
     <link rel="icon" type="image/x-icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiyTml2zBkbTtkE8x_PfyhdecGAD_5F44JQB6YlpjHyellSnq-ineelcfaNcZ5Q2Ue_y-S2bpJ5KvywrCfHKc5WrU-VW0nr8wOuPGidap4PB9FBwdgECGtXWfmMCrDWc8lcSdkwzpNTrIGB-GocutT_Ts6iq-QEID2Yovh411H1cMtagdCNRBDMTBULhdA/s1600/logoicon.png">
 
-    <link rel="stylesheet" href="Home.component.css">
+    <link rel="stylesheet" href="Home.css">
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
@@ -236,7 +236,7 @@
     </footer>
 
     <!--Link Js-->
-    <script src="Home.component.js"></script>
+    <script src="Home.js"></script>
 </body>
 
 </html>
